Better directions and a CSS change
A gave the center column a fixed with, but added a media query so it
will shrink if the screen gets too narrow (like on a phone).

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     <main role="main">
       <p id="app-description">
-        An instrument played with the keyboard.
+        An instrument played with the keyboard. Simply press 6 different keys
+        your keyboard, then start tapping them in differnt combinations to
+        produce different tones.
       </p>
 
       <p id="vol-disp">Volume: 0</p>
